# python-pathway

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.cursor/rules/: 00-program-spec.mdc  01-mentor-persona.mdc  python-mastery-mentor.mdc
python_pathway/: __init__.py
python_pathway/1-game-of-life/: 03-project-1.1-game-of-life.mdc  grid.py
python_pathway/2-mandelbrot/: 04-project-1.2-mandelbrot.mdc
tests/: __init__.py  test_example.py
